--- a/backend/infra/compose.prod.yml
+++ b/backend/infra/compose.prod.yml
@@ -1,16 +1,15 @@
-version: '3.8'
-
 services:
   auth-service:
     build:
-      context: ../..
+      context: ..
       dockerfile: infra/docker/Dockerfile.auth
     container_name: auth-service
     restart: unless-stopped
     ports:
       - "8001:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/auth_service.db
+      - DATABASE_URL=sqlite:////app/data/auth_service.db
+      # SECRET_KEY берется из .env файла или использует значение по умолчанию
       - SECRET_KEY=${SECRET_KEY:-change-this-secret-key-in-production}
     volumes:
       - ./data/auth:/app/data
@@ -19,14 +18,16 @@ services:
 
   dictionary-service:
     build:
-      context: ../..
+      context: ..
       dockerfile: infra/docker/Dockerfile.dictionary
     container_name: dictionary-service
     restart: unless-stopped
     ports:
       - "8002:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/dictionary_service.db
+      - DATABASE_URL=sqlite:////app/data/dictionary_service.db
+      # SECRET_KEY должен быть одинаковым во всех сервисах для проверки JWT токенов
+      - SECRET_KEY=${SECRET_KEY:-change-this-secret-key-in-production}
     volumes:
       - ./data/dictionary:/app/data
     networks:
@@ -34,14 +35,16 @@ services:
 
   search-service:
     build:
-      context: ../..
+      context: ..
       dockerfile: infra/docker/Dockerfile.search
     container_name: search-service
     restart: unless-stopped
     ports:
       - "8003:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/search_service.db
+      - DATABASE_URL=sqlite:////app/data/search_service.db
+      # SECRET_KEY должен быть одинаковым во всех сервисах для проверки JWT токенов
+      - SECRET_KEY=${SECRET_KEY:-change-this-secret-key-in-production}
     volumes:
       - ./data/search:/app/data
     networks:
@@ -49,14 +52,16 @@ services:
 
   import-export-service:
     build:
-      context: ../..
+      context: ..
       dockerfile: infra/docker/Dockerfile.import_export
     container_name: import-export-service
     restart: unless-stopped
     ports:
       - "8004:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/import_export_service.db
+      - DATABASE_URL=sqlite:////app/data/import_export_service.db
+      # SECRET_KEY должен быть одинаковым во всех сервисах для проверки JWT токенов
+      - SECRET_KEY=${SECRET_KEY:-change-this-secret-key-in-production}
     volumes:
       - ./data/import_export:/app/data
     networks:
@@ -64,14 +69,16 @@ services:
 
   admin-service:
     build:
-      context: ../..
+      context: ..
       dockerfile: infra/docker/Dockerfile.admin
     container_name: admin-service
     restart: unless-stopped
     ports:
       - "8005:8000"
     environment:
-      - DATABASE_URL=sqlite:///./data/admin_service.db
+      - DATABASE_URL=sqlite:////app/data/admin_service.db
+      # SECRET_KEY должен быть одинаковым во всех сервисах для проверки JWT токенов
+      - SECRET_KEY=${SECRET_KEY:-change-this-secret-key-in-production}
     volumes:
       - ./data/admin:/app/data
     networks:
@@ -87,6 +94,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/www/certbot:/var/www/certbot:ro
+      - ../../frontend/dist:/usr/share/nginx/html:ro
     depends_on:
       - auth-service
       - dictionary-service
