--- a/backend/infra/nginx/nginx.conf
+++ b/backend/infra/nginx/nginx.conf
@@ -52,32 +52,87 @@ http {
         server admin-service:8000;
     }
 
+    # HTTP сервер - редирект на HTTPS
     server {
         listen 80;
-        server_name _;
+        server_name dvdictionary.kz www.dvdictionary.kz;
 
-        # Health check endpoint
+        # Health check endpoint (доступен без HTTPS)
         location /health {
             access_log off;
             return 200 "healthy\n";
             add_header Content-Type text/plain;
         }
 
+        # ACME challenge для Let's Encrypt (если используется)
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Редирект всего остального на HTTPS
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
+    }
+
+    # HTTPS сервер
+    server {
+        listen 443 ssl http2;
+        server_name dvdictionary.kz www.dvdictionary.kz;
+
+        # SSL сертификаты Let's Encrypt
+        ssl_certificate /etc/letsencrypt/live/dvdictionary.kz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dvdictionary.kz/privkey.pem;
+        
+        # Если используете другие сертификаты (не Let's Encrypt):
+        # ssl_certificate /etc/nginx/ssl/cert.pem;
+        # ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        # SSL настройки (современные и безопасные)
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_session_tickets off;
+
+        # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # Frontend - статические файлы
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+            index index.html;
+        }
+
+        # Frontend - статические ресурсы (JS, CSS, изображения и т.д.)
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            root /usr/share/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
         # Auth Service
         location /api/v1/auth/ {
-            proxy_pass http://auth_service;
+            proxy_pass http://auth_service/api/v1/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
         }
 
         location /api/v1/profile {
-            proxy_pass http://auth_service;
+            proxy_pass http://auth_service/api/v1/profile;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
         }
 
         # Dictionary Service
